# bride-cognitive-client

./: .gitignore  LICENSE  README.md  SHOW_HN.md  pyproject.toml
examples/: basic_usage.py
src/bride_cognitive_client/: __init__.py  client.py
tests/: test_client.py
